fix badge alignment on headers

--- a/app/_assets/stylesheets/badges.less
+++ b/app/_assets/stylesheets/badges.less
@@ -1,7 +1,5 @@
 .badge {
   display: inline-flex;
-  margin: 0;
-  padding: 0;
   border-radius: 2px;
 
   &:after {
@@ -167,6 +165,10 @@ h5.badge {
     max-height: 12px;
     align-self: center;
     padding: 5px 12px 4px;
+  }
+
+  .tooltiptext {
+    margin-top: 2rem;
   }
 
   &:hover,
